--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_map: 0.5.2
   sensors: ^0.4.0+1
   location: ^2.3.5
+  livemap: ^0.2.0
 
 dev_dependencies:
   flutter_test:
