--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_map: 0.5.2
+  #flutter_map: 0.5.2
   sensors: ^0.4.0+1
   location: ^2.3.5
   livemap: ^0.2.0
